[package]
name = "rltk"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-segmentation = "1"
anyhow = "1"
regex="1.5"
lazy_static = "1"
crossbeam-channel = "0.5"
chrono = "0.4"
unicode-segmentation = "1.9.0"

[dev-dependencies]
more-asserts = "0.3"

[[bin]]
name = "count"
path = "src/bin/count.rs"
